Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29849

Assertion `lock->trx == this' failed in drop.cc:163

    XMLWordPrintable

Details

    Description

      origin/10.6 ab0190101b0587e0e03b2d75a967050b9a85fd1b 2022-10-21T10:02:54+03:00
       
      When executing some RQG test fiddling with FOREIGN KEYs I hit
      | [rr 1908875 679014]mysqld: /data/Server/10.6C/storage/innobase/dict/drop.cc:163: dberr_t trx_t::drop_table(const dict_table_t&): Assertion `lock->trx == this' failed.
       
      (rr) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x00003a157a182859 in __GI_abort () at abort.c:79
      #2  0x00003a157a182729 in __assert_fail_base (fmt=0x3a157a318588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55c1fd25e440 "lock->trx == this", file=0x55c1fd25dde0 "/data/Server/10.6C/storage/innobase/dict/drop.cc", 
          line=163, function=<optimized out>) at assert.c:92
      #3  0x00003a157a193f36 in __GI___assert_fail (assertion=0x55c1fd25e440 "lock->trx == this", file=0x55c1fd25dde0 "/data/Server/10.6C/storage/innobase/dict/drop.cc", line=163, 
          function=0x55c1fd25e2e0 "dberr_t trx_t::drop_table(const dict_table_t&)") at assert.c:101
      #4  0x000055c1fc21acc5 in trx_t::drop_table (this=0x73670f596440, table=...) at /data/Server/10.6C/storage/innobase/dict/drop.cc:163
      #5  0x000055c1fbb7f9a8 in ha_innobase::truncate (this=0x61d0011602b8) at /data/Server/10.6C/storage/innobase/handler/ha_innodb.cc:13999
      #6  0x000055c1fb29c284 in handler::ha_truncate (this=0x61d0011602b8) at /data/Server/10.6C/sql/handler.cc:5083
      #7  0x000055c1faf2977f in Sql_cmd_truncate_table::handler_truncate (this=0x62b0000c4a88, thd=0x62b0000bd218, table_ref=0x62b0000c4368, is_tmp_table=false) at /data/Server/10.6C/sql/sql_truncate.cc:255
      #8  0x000055c1faf2aef7 in Sql_cmd_truncate_table::truncate_table (this=0x62b0000c4a88, thd=0x62b0000bd218, table_ref=0x62b0000c4368) at /data/Server/10.6C/sql/sql_truncate.cc:507
      #9  0x000055c1faf2b364 in Sql_cmd_truncate_table::execute (this=0x62b0000c4a88, thd=0x62b0000bd218) at /data/Server/10.6C/sql/sql_truncate.cc:573
      #10 0x000055c1faac67cc in mysql_execute_command (thd=0x62b0000bd218, is_called_from_prepared_stmt=false) at /data/Server/10.6C/sql/sql_parse.cc:5997
      #11 0x000055c1faad27d1 in mysql_parse (thd=0x62b0000bd218, rawbuf=0x62b0000c4238 "TRUNCATE TABLE child /* E_R Thread1 QNO 899 CON_ID 16 */", length=56, parser_state=0x640009c479b0) at /data/Server/10.6C/sql/sql_parse.cc:8016
      #12 0x000055c1faaab2b4 in dispatch_command (command=COM_QUERY, thd=0x62b0000bd218, packet=0x629000bfe219 "TRUNCATE TABLE child /* E_R Thread1 QNO 899 CON_ID 16 */ ", packet_length=57, blocking=true)
          at /data/Server/10.6C/sql/sql_parse.cc:1896
      #13 0x000055c1faaa8815 in do_command (thd=0x62b0000bd218, blocking=true) at /data/Server/10.6C/sql/sql_parse.cc:1409
      #14 0x000055c1faea2e66 in do_handle_one_connection (connect=0x608000003238, put_in_cache=true) at /data/Server/10.6C/sql/sql_connect.cc:1416
      #15 0x000055c1faea27ee in handle_one_connection (arg=0x608000002d38) at /data/Server/10.6C/sql/sql_connect.cc:1318
      #16 0x0000751a0b860609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #17 0x00003a157a27f293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      (rr)
       
      pluto:/data/results/1666377533/TBR-1181$ _RR_TRACE_DIR=./1/rr/ rr replay --mark-stdio
       
      How to replay the problem
      ----------------------------------------
      git clone https://github.com/mleich1/rqg --branch experimental RQG
      make a MariaDB build with ASAN and install in <somewhere>
       
      cd <RQG>
      ./REPLAY_SIMP.sh TBR-1181.cfg /Server_bin/10.6_asan
           The first 
      

      Attachments

        1. TBR-1600.yy
          0.7 kB
          Matthias Leich
        2. TBR-1600.zz
          1 kB
          Matthias Leich
        3. TBR-1181.cfg
          43 kB
          Matthias Leich

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              mleich Matthias Leich
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.